src/app/components/database/database-people/database-people.component.scss
.filter-field {
  width: calc(100% - 1.5rem);
  margin: 0.5rem 0.75rem 0 0.75rem;
}
.table-div {
  margin-bottom: 22rem;
  table {
    width: 100%;
    .mat-row {
      &:hover {
        background-color: #F5F5F5;
        cursor: pointer;
      }
    }
  }
}

mat-drawer-container {
  padding-top: 4rem;
  mat-drawer {
    width: 12rem;
    .content {
      text-align: center;
      padding-top: 4rem;
      div {
        margin: 2rem 0;
        table {
          text-align: left;
          td {
            padding: 0.5rem 1.4rem;
          }
        }
      }
    }
  }
}

mat-spinner {
  margin: 0 auto;
  top: 10rem;
}

